--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,17 @@
 Qwen*/
-Qwen*/**
-Qwen*/*
 longformer*/
-longformer*/*
-longformer*/**
-models*/
-models*/*
-models*/**
-datasets*/
-datasets*/*
-datasets*/**
+models/*
+!models/encoder/90000/
+!models/alignment1/3mixed/300/
+!models/alignment2/3mixed/1800-500/
+!models/traffic_embedder/30000-2gpu/
+datasets/
+!datasets/rag-corpus/
+!datasets/rag-emb-index
 uer/
 RAG/embedder/Qwen*/
-RAG/embedder/Qwen*/*
-RAG/embedder/Qwen*/**
 RAG/corpus/
-RAG/corpus/*
-RAG/corpus/**
 logs/
-logs/*
-logs/**
 pickle_records/
-pickle_records/*
-pickle_records/**
 **/*.pyc
 **/*.deb
