--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,7 @@ models/alignment2/3mixed/1800-500/** filter=lfs diff=lfs merge=lfs -text
 models/traffic_embedder/7500/** filter=lfs diff=lfs merge=lfs -text
 datasets/rag-corpus/** filter=lfs diff=lfs merge=lfs -text
 datasets/rag-emb-index/** filter=lfs diff=lfs merge=lfs -text
+datasets/zero-shot/** filter=lfs diff=lfs merge=lfs -text
+datasets/rag-corpus-index/** filter=lfs diff=lfs merge=lfs -text
 models/traffic_embedder/30000-2gpu/** filter=lfs diff=lfs merge=lfs -text
 datasets/finetuning/5/App53*/** filter=lfs diff=lfs merge=lfs -text
